--- a/sass/main.css
+++ b/sass/main.css
@@ -458,7 +458,7 @@ body {
       border-radius: 0; }
   .main-content .row .button-wrap {
     padding: 0; }
-    @media only screen and (max-width: 480px) {
+    @media only screen and (max-width: 768px) {
       .main-content .row .button-wrap {
         display: none; } }
     .main-content .row .button-wrap .user-button {
